# ev3dev-mocks

./: CMakeLists.txt  README.md
alsa/: CMakeLists.txt  ctl_ev3dev.c  ev3dev.alsa.conf
debian/: changelog  control  copyright  libasound2-plugin-ev3dev.install  release.sh
script/: CMakeLists.txt  ev3dev-mocks-run.in  ev3dev-mocks-run.md
umockdev/: CMakeLists.txt  README.md  ev3-buttons.ioctl  ev3-fbdev.ioctl.in  ev3.umockdev.in
umockdev/ARM/: FBIOGET_FSCREENINFO
umockdev/armv7l/: ev3-fbdev.ioctl
umockdev/x86-64/: FBIOGET_FSCREENINFO
umockdev/x86_64/: ev3-fbdev.ioctl
